[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yomitoku"
version = "0.6.0"
authors = [{name = "Kotaro Kinoshita", email = "kotaro.kinoshita@mlism.com"}]
description = "Yomitoku is an AI-powered document image analysis package designed specifically for the Japanese language."
readme = "README.md"
license = {text = "CC BY-NC-SA 4.0"}
requires-python = ">=3.10,<3.13"
keywords = ["Japanese", "OCR", "Deep Learning"]
dependencies = [
    "huggingface-hub>=0.26.1",
    "lxml>=5.3.0",
    "omegaconf>=2.3.0",
    "opencv-python>=4.10.0.84",
    "pyclipper>=1.3.0.post6",
    "pydantic>=2.9.2",
    "shapely>=2.0.6",
    "timm>=1.0.11",
    "torchvision>=0.20.0",
    "torch>=2.5.0",
    "pypdfium2>=4.30.0",
    "onnx>=1.17.0",
    "onnxruntime>=1.20.1"
]

[project.scripts]
yomitoku = "yomitoku.cli.main:main"

[tool.uv.sources]
torch = [
    { index = "pytorch-cuda124", marker = "platform_system == 'Windows'" },
    { index = "pytorch-mps", marker = "platform_system == 'Darwin' and platform_machine == 'arm64'" },
    { index = "pytorch-cpu", marker = "platform_system == 'Darwin' and platform_machine != 'arm64'" }
]
torchvision = [
    { index = "pytorch-cuda124", marker = "platform_system == 'Windows'" },
    { index = "pytorch-mps", marker = "platform_system == 'Darwin' and platform_machine == 'arm64'" },
    { index = "pytorch-cpu", marker = "platform_system == 'Darwin' and platform_machine != 'arm64'" }
]

[[tool.uv.index]]
name = "pytorch-cuda124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[[tool.uv.index]]
name = "pytorch-mps"
url = "https://download.pytorch.org/whl/nightly/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
